# hawkshot

./: .gitignore  README.md  app.py  hawkshot.py  pyproject.toml  requirements.txt
hawkshot/: __init__.py  analysis.py  cli.py  dem.py  plotting.py  workflow.py
tests/: make_demo_dem.py  test_analysis.py  test_sampling_workflow.py
