[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hawkshot"
version = "0.1.0"
description = "Viewshed / line-of-sight analysis from DEM data"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Hawkshot Contributors" }]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.8",
  "rasterio>=1.3",
  "pyproj>=3.6",
  "streamlit>=1.32",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
hawkshot = "hawkshot.cli:main"

[tool.setuptools]
packages = ["hawkshot"]
